AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} APP_SRC)
ADD_EXECUTABLE(heap ${APP_SRC})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_C_FLAGS "-Wall -g -finstrument-functions -pg -ftest-coverage -fprofile-arcs -funwind-tables -rdynamic")
LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/lib)
TARGET_LINK_LIBRARIES(heap kkkmmu)
