AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} LIB_SRC)
ADD_LIBRARY(kkkmmu SHARED ${LIB_SRC})
ADD_LIBRARY(kkkmmu_static STATIC ${LIB_SRC})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_C_FLAGS "-Wall -g -pg")
SET_TARGET_PROPERTIES (kkkmmu_static PROPERTIES OUTPUT_NAME kkkmmu)
SET_TARGET_PROPERTIES (kkkmmu PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (kkkmmu PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (kkkmmu PROPERTIES VERSION 1.1 SOVERSION 1)
TARGET_LINK_LIBRARIES(kkkmmu dl pthread)
# install (TARGETS heap heap_static 
#     LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/lib
#     ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/lib)
INSTALL (FILES *.h DESTINATION ${PROJECT_BINARY_DIR}/include/heap)
