AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} APP_SRC)
ADD_EXECUTABLE(heapTest ${APP_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_C_FLAGS "-Wall -g")
#LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/lib)
TARGET_LINK_LIBRARIES(heapTest kkkmmu)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/lib/unity ${PROJECT_SOURCE_DIR}/lib/llog/src)
