CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} LIB_SRC)
ADD_LIBRARY(etrace SHARED ${LIB_SRC})
ADD_LIBRARY(etrace_static STATIC ${LIB_SRC})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_C_FLAGS "-Wall -g -finstrument-functions -pg -funwind-tables -rdynamic")
SET_TARGET_PROPERTIES (etrace_static PROPERTIES OUTPUT_NAME fault)
SET_TARGET_PROPERTIES (etrace PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (etrace PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (etrace PROPERTIES VERSION 1.1 SOVERSION 1)
# install (TARGETS etrace etrace_static 
#     LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/lib
#     ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/lib)
INSTALL (FILES *.h DESTINATION ${PROJECT_BINARY_DIR}/include/etrace)
